# CXR_View_Classification

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  Dockerfile  Jenkinsfile  LICENSE  LabelImages.py  README.md  api_controller.py  basic_db_ops.py  calculate_button.py  calculate_features.py  classification.py  classification_button.py  config.py  config_template.ini  cxr_classification.py  dicom_to_db.py  download_button.py  download_dataset.py  elements.json  environment.yml  features_list.json  folder.spec  full_set_classifier.joblib  label.json  label_button.py  main.py  main.spec  main_gui.py  one_file.spec  send_script.py  store_button.py  unpack_button.py  workers.py
Combined/DesktopApp/: cxrConfigHandler.py  downloadStage.py  downloadstage.cpp  downloadstage.h  expectedSizes.py  featureCalculatorStage.py  labelStage.py  main.py  mainWindow.py  storeStage.py  trainStage.py  unpackStage.py
Combined/DesktopApp/UML/: ClassDiagram.mdj
Combined/DesktopApp/UnpackerSource/: confighandler.cpp  unpacker.cpp  unpacker.h
Combined/DesktopApp/buildTools/: Jenkinsfile  cmakeBuildCommands.txt  makeBuildCommands.txt  manualBuildCommands.txt
Combined/DesktopApp/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake  trainer.pc
Combined/DesktopApp/cmd_build/: commandsToBuild.txt
Combined/DesktopApp/make_build/: Makefile
Combined/DesktopApp/src/: CMakeLists.txt  Makefile  commandsToBuild.txt  confighandler.cpp  confighandler.h  databasehandler.cpp  databasehandler.h  downloader.cpp  downloader.h  featurecalculator.cpp  featurecalculator.h  labelimporter.cpp  labelimporter.h  pythonBuild.py  storer.cpp  storer.h  trainer.cpp  trainer.h  unpacker.cpp  unpacker.h
Combined/DesktopApp/src_test/: Makefile  confighandler.cpp  confighandler.h  unpacker.h
Combined/SharedCode/: setup.py
Combined/SharedCode/cxr_pipeline/: preprocessing.py
Cpp/CXR_classify/: CXR_classify.pro  appcontroller.cpp  appcontroller.h  basicDbOps.cpp  basicDbOps.h  columns_info.json  confighandler.cpp  confighandler.h  confighandlers.cpp  confighandlers.h  databasehandler.cpp  databasehandler.h  datasetdownloader.cpp  datasetdownloader.h  downloadbutton.cpp  downloadbutton.h  downloader.cpp  downloader.h  downloader1.cpp  downloader1.h  downloadstage.cpp  downloadstage.h  downloadupdater.cpp  downloadupdater.h  expectedsizes.h  featcalcupdater.cpp  featcalcupdater.h  featurecalculator.cpp  featurecalculator.h  featurecalculatorstage.cpp  featurecalculatorstage.h  labeler.cpp  labeler.h  labelimporter.cpp  labelimporter.h  labelstage.cpp  labelstage.h  main.cpp  mainwindow.cpp  mainwindow.h  (+30 more)
Cpp/UML/: ClassDiagram.mdj
Go/CxrClassify/: README.md  go.mod  go.sum  main.go
Go/CxrClassify/configHandler/: configHandler.go  configHandler_test.go
Go/CxrClassify/databaseHandler/: databaseHandler.go  databaseHandler_test.go
Go/CxrClassify/downloadStage/: downloadStage.go  downloadStage_test.go  downloader.go  downloader_test.go
Go/CxrClassify/downloader/: downloader.go  downloader_test.go
Go/CxrClassify/expectedSizes/: expectedSizes.go
Go/CxrClassify/featStage/: featStage.go  featStage_test.go  featureCalculator.go  featureCalculator_test.go
Go/CxrClassify/featureCalculator/: featureCalculator.go  featureCalculator_test.go
Go/CxrClassify/labelStage/: labelStage.go  labelStage_test.go  manualLabeler.go  manualLabeler_test.go
Go/CxrClassify/mainWindow/: mainWindow.go  mainWindow_test.go
Go/CxrClassify/manualLabeler/: manualLabeler.go  manualLabeler_test.go
Go/CxrClassify/runnable/: runnable.go  runnable_test.go
Go/CxrClassify/stage/: stage.go  stage_test.go
Go/CxrClassify/storeStage/: storeStage.go  storeStage_test.go  storer.go  storer_test.go
Go/CxrClassify/storer/: storer.go  storer_test.go
Go/CxrClassify/trainStage/: trainStage.go  trainStage_test.go  trainer.go  trainer_test.go
Go/CxrClassify/trainer/: trainer.go  trainer_test.go
Go/CxrClassify/unpackStage/: unpackStage.go  unpackStage_test.go  unpacker.go  unpacker_test.go
Go/CxrClassify/unpacker/: unpacker.go  unpacker_test.go
Python/DesktopApp/: LabelImages.py  app_controller.py  buttons.py  calculate_features.py  classification.py  columns_info.json  config_handler.py  config_template.ini  controller.py  cxrConfigHandler.py  cxr_config_handler.py  database_handler.py  dicom_to_db.py  downloadStage.py  download_dataset.py  downloader.py  expectedSizes.py  expected_sizes.py  featureCalculatorStage.py  feature_calculator.py  labelImporterStage.py  labelStage.py  label_importer.py  labeler.py  labelerStage.py  main.py  mainWindow.py  main_gui.py  main_window.py  resetApp.py  stage.py  storeStage.py  storer.py  trainStage.py  trainer.py  unpackStage.py  unpacker.py  workers.py
Python/DesktopApp/UML/: ClassDiagram.mdj
Python/DesktopApp/pyinstaller/: folder.spec  one_file.spec
Python/DesktopApp/test/: conftest.py  test_cxrConfigHandler.py  test_databaseHandler.py  test_downloadStage.py  test_featCalcStage.py  test_importLabeler.py  test_labelStage.py  (+4 more)
Python/Engine/: api_controller.py
Python/pyinstaller/: folder.spec  one_file.spec
aws_deploy/: requirements.txt
aws_deploy/templates/: how_to_page.html
dist_folder/main/: columns_info.json  libavformat.so.58  libavutil.so.56  libcrypto.so.1.1  libhdf5.so.101  libjasper.so.4  libopus.so.0  libpq.so.5  libswresample.so.3  libswscale.so.5  libtinfow.so.6  libvpx.so.5
dist_folder_16_04/main/: libavformat.so.58  libavutil.so.56  libcrypto.so.1.1  libhdf5.so.101  libpq.so.5  libswresample.so.3  libswscale.so.5  libtinfow.so.6  libvpx.so.5  libz.so.1
miscellaneous/: columns_info.json  combinedBuild.sh  combinedCmakeBuild.sh  combinedCmakeSetup.sh  combinedDownloadSetup.sh  combinedGppBuild.sh  combinedGppSetup.sh  combinedMakeBuild.sh  combinedMakeSetup.sh  combinedSetup.sh  config.ini  cppBuildSetup.sh  cppSetup.sh  engineRequirements.txt  engineSetup.sh  environment.yml  installation.sh  newVMSetup.txt  performance.csv  performanceAnalysis.py  postgresSetup.sh  pyinstallerSetup.sh  pythonSetup.sh  requirements.txt  send_script.py  test_images.csv
(+20 files in other folders)
